# Axia-Network-scale-info

./: CHANGELOG.md  Cargo.toml  FILE_TEMPLATE  README.md
derive/: Cargo.toml
derive/src/: attr.rs  lib.rs  trait_bounds.rs  utils.rs
src/: build.rs  form.rs  impls.rs  interner.rs  lib.rs  meta_type.rs  prelude.rs  registry.rs  tests.rs  utils.rs
src/ty/: composite.rs  fields.rs  mod.rs  path.rs  variant.rs
test_suite/: Cargo.toml
test_suite/derive_tests_no_std/: Cargo.toml
test_suite/derive_tests_no_std/src/: main.rs
test_suite/tests/: codec.rs  derive.rs  json.rs
